Added Chapter API to fetch all chapters
